# Banded_Smith_Waterman_BGV

./: README.md
helibTest/: CMakeLists.txt  bgv_fatboot.cpp  comparator.cpp  comparator.h  compare.cpp  host_data.h  host_data_io.cpp  host_kernel.cpp  main.cpp  minmax.cpp  sorting.cpp  test.cpp
